Fix season poster to handle shift of specials season

--- a/src/app/helpers/torrent-card/torrent-card.component.scss
+++ b/src/app/helpers/torrent-card/torrent-card.component.scss
@@ -50,6 +50,7 @@ html, body {
 		border-radius: 10px;
 
 		.movie_header {
+			min-height: 270px;
 			position: relative;
 			padding-top: 25px;
 			padding-left: 25px;
